# NE555-recommender

./: .env.example  .gitignore  CLAUDE.md  README.md  agent_runner.py  config.py  error_log.txt  extractor.py  git-auth-test.txt  llm_client.py  main.py  models.py  pdf_generator.py  pyproject.toml  recommender.py  user_prompt.txt  web_searcher.py
.claude/: settings.json
agents/circuit_search/: agent.py  description.txt  instructions.txt  instructions_builder_prompt.txt
agents/requirements_writer/: agent.py  description.txt  instructions.txt  instructions_builder_prompt.txt
agents/results_writer/: agent.py  instructions.txt  instructions_builder_prompt.txt
agents/root_ne555_recommender/: agent.py
dectools/: __init__.py  decors.py
tools/: page_checker.py
utils/: config.py  json_manipulations.py
