[project]
name = "ne555-recommender"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "google-genai>=1.0.0",
    "pydantic>=2.13.4",
    "reportlab>=4.5.0",
    "ddgs>=1.0.0",
    "python-dotenv>=1.0.1",
    "requests>=2.32.3",
    "beautifulsoup4>=4.12.3",
    "lxml>=5.3.0",
    "click>=8.1.8",
    "ollama>=0.4.0",
]

[tool.uv]
package = false
